Replace deprecated constructor for Long